--- a/resources/Makefile
+++ b/resources/Makefile
@@ -5,3 +5,7 @@ createAtlas:
 	convert +append B*.png tempAtlasB.png && \
 	convert -append temp*.png atlas.png && \
 	rm temp*.png
+
+
+createPlayerSprites:
+	convert 8dot.png -size 64x64 -gravity Center -pointsize 30 -font Silom -annotate 0 'A' oil.png
